fix tablet Layout issue

--- a/src/shared/components/CinemaPagination/cinemaPagination.scss
+++ b/src/shared/components/CinemaPagination/cinemaPagination.scss
@@ -19,7 +19,7 @@
   width: inherit;
   justify-content: center;
 
-  @include phones() {
+  @include tablets() {
     flex-flow: column-reverse;
     align-items: center;
   }
