--- a/src/shared/components/WrappContentWithPagination/wrappContentWithPagination.scss
+++ b/src/shared/components/WrappContentWithPagination/wrappContentWithPagination.scss
@@ -6,21 +6,19 @@
   flex-flow: wrap;
   margin-bottom: 5%;
   @include phones() {
-    margin-bottom: 8%;
     flex-direction: column;
   }
 }
 
 .pick-year,
-.pick-genres,
-.pick-camrip {
+.pick-genres,{
   display: flex;
   flex: 1;
   flex-flow: wrap;
   align-items: center;
   justify-content: center;
   @include phones() {
-    margin-bottom: 4%;
+    margin-bottom: 8%;
   }
 }
 
@@ -37,6 +35,9 @@
   @include desktop() {
     flex: 2;
   }
+  @include tablets() {
+    margin-bottom: 5%;
+  }
 }
 
 .wrapp-list-serials {
@@ -44,9 +45,6 @@
   flex-direction: column;
   align-items: center;
   flex: 1;
-  @include phones() {
-    // display: none;
-  }
 }
 .wrapp-list-serials--title {
   color: white;
